--- a/agenda-una-visita.html
+++ b/agenda-una-visita.html
@@ -93,7 +93,7 @@
             <a href="#" class="open_close" id="close_in"><i class="icon_close"></i></a>
             <ul>
               <li class="submenu">
-                <a href="#" class="show-submenu"><i class="fas fa-home"></i></a>
+                <a href="index.html" class="show-submenu"><i class="fas fa-home"></i></a>
               </li>
               <li class="submenu">
                 <a href="nuestros-servicios.html" class="show-submenu">Servicios</i></a>
