--- a/contacto.html
+++ b/contacto.html
@@ -131,9 +131,6 @@
 
             <div class="col-md-9">
 
-              <div id="map"></div><!-- end map-->
-
-               <hr>
 
               <div id="message-contact"></div>
                 <form method="post" action="assets/contact.php" id="contactform">
@@ -175,10 +172,6 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6">
-                            <div class="form-group">
-                            <label>Eres humano? cuánto es 3 + 1? =</label>
-                            <input type="text" id="verify_contact" class=" form-control">
-                            </div>
                             <input type="submit" value="Enviar" class="btn_1 green medium add_bottom_30" id="submit-contact"/>
                         </div>
                     </div>
@@ -196,10 +189,9 @@
                             	 <li><strong>Atención al cliente</strong><br><a href="tel://+59332586728"> +59332586728</a></li>
                                 <li><strong>Información</strong><br><a href="tel://+59332586728"> +59332586728</a><br><small>Lunes a viernes 8am - 5pm</small></li>
                                 <li><strong>Información General</strong><br><a href="mailto:info@domain.com">info@alfapaz.com</a></li>
-                                <li><strong>Deseas una visita?</strong><p class="nopadding">Id pri consul aeterno petentium. Vivendo abhorreant et vim, et quot persecuti mel.<br><a href="mailto:visitas@alfapaz.com">visitas@alfapaz.com</a></p></li>
+                                <li><strong>Deseas una visita?</strong><p class="nopadding"> Quieres que un equipo especializado te visite?.<br><a href="mailto:visitas@alfapaz.com">visitas@alfapaz.com</a></p></li>
                             </ul>
                     </div>
-                    <div class="quote_banner"><a href="quotation.html">Quieres Cotizar?</a></div>
                 </div><!-- End col-md-3 -->
             </div><!-- End row -->
         </div><!-- End container -->
