--- a/nuestros-servicios.html
+++ b/nuestros-servicios.html
@@ -62,65 +62,66 @@
 	<div class="layer"></div><!-- Mobile menu overlay mask -->
 
 	<!-- Header================================================== -->
-	<header>
-		<div id="top_line">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-4 hidden-xs">
-            <span id="tag_line">"Expertos  en seguridad privada"</span>
-					</div>
-						<ul id="top_links">
-							<li><a href="tel://+59332586728" id="phone_top">+593 32586728</a><span id="opening">Lun - Vie 8.00/17.00</span></li>
-						</ul>
-					</div>
-				</div><!-- End row -->
-			</div><!-- End container-->
-		</div><!-- End top line-->
+  <header>
+    <div id="top_line">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-3 hidden-xs">
+            <span id="tag_line">"Nuestro compromiso, tu seguridad"</span>
+          </div>
+          <div class="col-sm-9">
+            <ul id="top_links">
+              <li><a href="tel://+59332586728" id="phone_top">+593 32586728</a><span id="opening">Lun - Vie 8.00/17.00</span></li>
+            </ul>
+          </div>
+        </div><!-- End row -->
+      </div><!-- End container-->
+    </div><!-- End top line-->
 
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-3">
-					<div id="logo">
-						<a href="index.html"><img src="img/logo.png" width="190" height="44" alt="Home Alarms" data-retina="true"></a>
-					</div>
-				</div>
-				<nav class="col-xs-9">
-  					<a class="cmn-toggle-switch cmn-toggle-switch__htx open_close" href="javascript:void(0);"><span></span></a>
-  					<div class="main-menu">
-  						<div id="header_menu">
-  							<img src="img/logo.png" width="190" height="44" alt="Home Alarms" data-retina="true">
-  						</div>
-  						<a href="#" class="open_close" id="close_in"><i class="icon_close"></i></a>
-  						<ul>
-  							<li class="submenu">
-  								<a href="index.html" class="show-submenu"><i class="fas fa-home"></i></a>
-  							</li>
-  							<li class="submenu">
-  								<a href="services_layout_2.html" class="show-submenu">Servicios</i></a>
-  						 </li>
-  							<li class="submenu">
-  								<a href="quotation.html" class="show-submenu">Cotizador</i></a>
-  							</li>
-                <li class="submenu">
-                  <a href="javascript:void(0);" class="show-submenu">Nuestra empresa <i class="icon-down-open-mini"></i></a>
-                  <ul>
-                    <li><a href="about.html">Acerca de</a></li>
-                    <li><a href="wwu.html">Trabaja con nosotros</a></li>
-                  </ul>
-                </li>
-  							<li><a href="contacts.html">Contáctanos</a></li>
-						</ul>
-					</div><!-- End main-menu -->
-				</nav>
-			</div>
-		</div><!-- container -->
-	</header><!-- End Header -->
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-3">
+          <div id="logo">
+            <a href="index.html"><img src="img/logo.png" width="190" height="44" alt="Home Alarms" data-retina="true"></a>
+          </div>
+        </div>
+        <nav class="col-xs-9">
+          <a class="cmn-toggle-switch cmn-toggle-switch__htx open_close" href="javascript:void(0);"><span></span></a>
+          <div class="main-menu">
+            <div id="header_menu">
+              <img src="img/logo.png" width="190" height="44" alt="Alfapaz" data-retina="true">
+            </div>
+            <a href="#" class="open_close" id="close_in"><i class="icon_close"></i></a>
+            <ul>
+              <li class="submenu">
+                <a href="index.html" class="show-submenu"><i class="fas fa-home"></i></a>
+              </li>
+              <li class="submenu">
+                <a href="nuestros-servicios.html" class="show-submenu">Servicios</i></a>
+             </li>
+              <li class="submenu">
+                <a href="agenda-una-visita.html" class="show-submenu">Agenda una visita</i></a>
+              </li>
+              <li class="submenu">
+                <a href="javascript:void(0);" class="show-submenu">Nuestra empresa <i class="icon-down-open-mini"></i></a>
+                <ul>
+                  <li><a href="acerca-de.html">Acerca de</a></li>
+                  <li><a href="trabaja-con-nosotros.html">Trabaja con nosotros</a></li>
+                </ul>
+              </li>
+              <li><a href="contacto.html">Contáctanos</a></li>
+            </ul>
+          </div><!-- End main-menu -->
+        </nav>
+      </div>
+    </div><!-- container -->
+  </header><!-- End Header -->
 
     <section class="parallax_window_in short" data-parallax="scroll" data-image-src="img/subheader_in_1.jpg" data-natural-width="1400" data-natural-height="350">
 		<div id="sub_content_in">
 			<div class="container">
 				<h1>Nuestros servicios</h1>
-				<p>"Con Alfapaz encuentras más que seguridad"</p>
+				<p>Seguridad al más alto nivel</p>
 			</div>
 		</div>
 	</section><!-- End section -->
@@ -132,19 +133,70 @@
                 <div class="col-md-9">
                	   	<img src="img/service_1.jpg" alt="" class="img-responsive border">
 					<h3>Seguridad privada</h3>
-					<p>Ad qui consulatu scripserit comprehensam. Eum <strong>purto epicurei cotidieque</strong> at, ius luptatum invidunt no, vim at sint pertinacia repudiandae. Ad cum dicant laboramus delicatissimi, ex has nonumes explicari prodesset, brute tincidunt conclusionemque no has. Sit ullum latine ei. Ius id adhuc iriure torquatos. Justo prompta senserit eos cu, omnesque posidonium liberavisse pri in. Malorum fabulas elaboraret mea in, vel ut harum tacimates posidonium.</p>
+					<p>Tenemos una Visión muy amplia en donde radica principalmente la experiencia desarrollada a lo largo de los años de nuestros principales Directivos tanto en el campo público como  privado, en seguridad y servicio al cliente, eso hace que nuestro reto sea diferenciarnos sustancialmente, con el afán de otorgar tranquilidad y satisfacción completa a nuestros clientes con un servicio integral en seguridad <strong>con excelencia en la prevención y protección de bienes y personas</strong>, siempre direccionados en principios y valores éticos, tanto como para nuestros clientes, como empleados a los que consideramos pilar fundamental de nuestra Institución.</p>
+          <p>Nos encargamos de proteger los activos de nuestros clientes, generando un ambiente tranquilo y transmitiendo confianza por medio de nuestros servicios tanto en seguridad física como electrónica.</p>
 
 					<div class="row">
-						<div class="col-md-6">
-							<img src="img/service_2.jpg" alt="" class="img-responsive border">
-							<h3>Sistema de alarmas</h3>
-							<p>Ad sed apeirian senserit gloriatur, eu iusto ubique impetus quo. Sea no essent cotidieque reformidans, sea an <strong>persius moderatius</strong> comprehensam, at nam tamquam alterum definiebas. Nibh facilisi mei eu, essent virtute ius id. Ne ullum consequat sit, dolorum deserunt expetendis no eam.</p>
-						</div>
-						<div class="col-md-6">
-							<img src="img/service_3.jpg" alt="" class="img-responsive border">
-							<h3>Monitoreo 24/7</h3>
-							<p>Ad sed apeirian senserit gloriatur, eu iusto ubique impetus quo. Sea no <strong>essent cotidieque</strong> reformidans, sea an persius moderatius comprehensam, at nam tamquam alterum definiebas. Nibh facilisi mei eu, essent virtute ius id. Ne ullum consequat sit, dolorum deserunt expetendis no eam.</p>
-						</div>
+            <div class="row strip">
+                        <div class="col-md-4">
+                            <p>
+                                <img src="img/service_2.jpg" alt="" class="img-responsive" data-retina="true">
+                            </p>
+                        </div>
+                        <div class="col-md-8">
+                            <h4>Seguridad física</h4>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <ul class="list_ok">
+                                        <li>Guardianía y vigilancia uniformada y armada.</li>
+                                        <li>Protección VIP (Guardaespaldas).</li>
+                                        <li>Custodia de personas o productos con o sin vehículo en todo el territorio nacional.</li>
+                                        <li>Repuesta a emergencias de alarma.</li>
+                                        <li>Servicio de patrullaje.</li>
+                                        <li>Seguridad para eventos.</li>
+                                    </ul>
+                                </div>
+                                <div class="col-md-6">
+                                    <ul class="list_ok">
+                                        <li>Investigaciones.</li>
+                                        <li>Consultorías y asesoramiento sobre seguridad integral.</li>
+                                        <li>Capacitación sobre manejo de armas.</li>
+                                        <li>Defensa personal.</li>
+                                        <li>Conducción a la defensiva antisecuestro o robo.</li>
+                                    </ul>
+                                </div>
+                            </div><!-- End row -->
+                        </div>
+                    </div><!-- End row -->
+                    <div class="row strip">
+                        <div class="col-md-4">
+                            <p>
+                                <img src="img/service_3.jpg" alt="" class="img-responsive" data-retina="true">
+                            </p>
+                        </div>
+                        <div class="col-md-8">
+                            <h4>Seguridad Electrónica</h4>
+                            <p>
+                                Como complemento en seguridad integral, ofertamos modernos sistemas electrónicos con tecnología de punta, con el afán de tener la combinación perfecta en la optimización de costos y nivel de protección.
+                            </p>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <ul class="list_ok">
+                                        <li>Alarmas sonoras y silentes contra intrusos.</li>
+                                        <li>Circuito cerrado de tv (cámaras de seguridad y vigilancia).</li>
+                                        <li>Sistema de Monitoreo.</li>
+                                    </ul>
+                                </div>
+                                <div class="col-md-6">
+                                    <ul class="list_ok">
+                                        <li>Sistemas de control de accesos.</li>
+                                        <li>Sistemas de detección perimetral.</li>
+                                        <li>Sistemas de detección de incendios.</li>
+                                    </ul>
+                                </div>
+                            </div><!-- End row -->
+                        </div>
+                    </div><!-- End row -->
 					</div>
 					<!-- End row -->
 
@@ -156,12 +208,12 @@
                             	<li>
                                 	<img src="img/icon_service_1.png" alt="" width="50" height="54" data-retina="true">
                                	  <h4>Atención permanente</h4>
-                                    <p>Nibh facilisi mei eu, essent virtute ius id. Ne ullum consequat sit, dolorum deserunt expetendis no eam.</p>
+                                    <p>Atendemos requerimientos de seguridad las 24 horas del día, los 7 días de la semana.</p>
                                 </li>
                                 <li>
                                 	<img src="img/icon_service_2.png" alt="" width="50" height="50" data-retina="true">
                                	  <h4>Respuesta rápida</h4>
-                                    <p>Nibh facilisi mei eu, essent virtute ius id. Ne ullum consequat sit, dolorum deserunt expetendis no eam.</p>
+                                    <p>En casos de emergencia, nuestro equipo de respuesta está siempre listo para atención.</p>
                                 </li>
                             </ul>
                         </div>
@@ -170,89 +222,35 @@
                                 <li>
                                	  <img src="img/icon_service_3.png" alt="" width="50" height="56" data-retina="true">
                                	  <h4>Profesionales calificados</h4>
-                                    <p>Nibh facilisi mei eu, essent virtute ius id. Ne ullum consequat sit, dolorum deserunt expetendis no eam.</p>
+                                    <p>Contamos con personal capacitado para un desarrollo constante y eficiente de su labores.</p>
                             	</li>
                                 <li>
                                 	<img src="img/icon_service_4.png" alt="" width="50" height="50" data-retina="true">
-                               	  <h4>Importadores directos</h4>
-                                    <p>Nibh facilisi mei eu, essent virtute ius id. Ne ullum consequat sit, dolorum deserunt expetendis no eam.</p>
+                               	  <h4>Mejores productos</h4>
+                                    <p>Trabajamos con las mejores marcas del mercado, haciendo nuestro trabajo bajo standards internacionales.</p>
                                 </li>
                             </ul>
                         </div>
                     </div><!-- End row -->
 
                     <hr>
-                  <h3>Precios referenciales</h3>
-                    <table class="table table-striped">
-                                <thead>
-                                  <tr>
-                                    <th>Opción</th>
-                                    <th>2 personas</th>
-                                    <th>3 personas</th>
-                                  </tr>
-                                </thead>
-                                <tbody>
-                                  <tr>
-                                    <td>Guardinía permanente</td>
-                                    <td>$50 /hr</td>
-                                    <td>$90 /hr</td>
-                                  </tr>
-                                  <tr>
-                                    <td>Guardianía ocasional</td>
-                                    <td>$150 /hr</td>
-                                    <td>$250 /hr</td>
-                                  </tr>
-                                  <tr>
-                                    <td>Seguridad personal</td>
-                                    <td>$350 /hr</td>
-                                    <td>$450 /hr</td>
-                                  </tr>
-                                </tbody>
-                              </table>
 
                 </div><!-- End col-md-9 -->
 
                 <div class="col-md-3">
                     <div class="box_style_1">
-                        <ul id="cat_nav">
-                            <li><a href="service_layout_1.html">Mantenimiento</a></li>
-                            <li><a href="service_layout_1.html">Sistemas de seguridad</a></li>
-                            <li><a href="service_layout_1.html">Alarmado</a></li>
-                            <li><a href="service_layout_1.html">Certificaciones</a></li>
-                        </ul>
-                        <hr>
                         <h5>Encontraste lo que buscabas?</h5>
                         <p class="nopadding">
-                            Ad sed apeirian senserit gloriatur, eu iusto ubique impetus quo.<br>
+                            Nuestro personal está listo para atender cualquier duda.<br>
                             <a href="contacts.html" class="link_normal">Contáctanos</a>
                         </p>
                     </div><!-- End Box_style_1 -->
-
-                    <div class="quote_banner">
-                        <a href="quotation.html">Quieres cotizar?</a>
-                    </div>
-
-                    <div class="box_style_2">
-                        <h4><i class="icon_lightbulb_alt"></i> Tips de seguridad</h4>
-                        <ul>
-                            <li>Nec no eros probatus, consetetur theophrastus.</li>
-                            <li>Vis minimum sadipscing mediocritatem ex.</li>
-                            <li>Postulant urbanitas usu in, in eum omnis viderer invenire.</li>
-                            <li>Tritani salutatus constituto id nec, quo dico aperiri atomorum ex. </li>
-                            <li>Illum molestie pri ei, senserit indoctum dignissim vis an.</li>
-                            <li>Eum accusam assueverit in, summo essent eirmod mel ut.</li>
-                        </ul>
-                        <p>
-                            <a href="tips.html" class="link_normal">Leer más</a>
-                        </p>
-                    </div>
                 </div><!-- End col-md-3 -->
 
             </div><!-- End row -->
         </div><!-- End container -->
 	</main><!-- End main -->
-
-<footer>
+  <footer>
     <div class="container">
       <div class="row ">
         <div class="col-md-4 col-sm-8">
