--- a/trabaja-con-nosotros.html
+++ b/trabaja-con-nosotros.html
@@ -93,7 +93,7 @@
             <a href="#" class="open_close" id="close_in"><i class="icon_close"></i></a>
             <ul>
               <li class="submenu">
-                <a href="#" class="show-submenu"><i class="fas fa-home"></i></a>
+                <a href="index.html" class="show-submenu"><i class="fas fa-home"></i></a>
               </li>
               <li class="submenu">
                 <a href="nuestros-servicios.html" class="show-submenu">Servicios</i></a>
@@ -108,7 +108,7 @@
                   <li><a href="trabaja-con-nosotros.html">Trabaja con nosotros</a></li>
                 </ul>
               </li>
-              <li><a href="contacts.html">Contáctanos</a></li>
+              <li><a href="contacto.html">Contáctanos</a></li>
             </ul>
           </div><!-- End main-menu -->
         </nav>
@@ -232,10 +232,9 @@
                             	 <li><strong>Atención al cliente</strong><br><a href="tel://+59332586728"> +59332586728</a></li>
                                 <li><strong>Información</strong><br><a href="tel://+59332586728"> +59332586728</a><br><small>Lunes a viernes 8am - 5pm</small></li>
                                 <li><strong>Información General</strong><br><a href="mailto:info@alfapaz.com">info@alfapaz.com</a></li>
-                                <li><strong>Deseas una visita?</strong><p class="nopadding">Id pri consul aeterno petentium. Vivendo abhorreant et vim, et quot persecuti mel.<br><a href="mailto:visitas@alfapaz.com">visitas@alfapaz.com</a></p></li>
+                                <li><strong>Deseas una visita?</strong><p class="nopadding">Quieres que un equipo especializado te visite?<br><a href="mailto:visitas@alfapaz.com">visitas@alfapaz.com</a></p></li>
                             </ul>
                     </div>
-                    <div class="quote_banner"><a href="quotation.html">Quieres Cotizar?</a></div>
                 </div><!-- End col-md-3 -->
             </div><!-- End row -->
         </div><!-- End container -->
