--- a/acerca-de.html
+++ b/acerca-de.html
@@ -94,7 +94,7 @@
 						<a href="#" class="open_close" id="close_in"><i class="icon_close"></i></a>
 						<ul>
 							<li class="submenu">
-								<a href="#" class="show-submenu"><i class="fas fa-home"></i></a>
+								<a href="index.html" class="show-submenu"><i class="fas fa-home"></i></a>
 							</li>
 							<li class="submenu">
 								<a href="nuestros-servicios.html" class="show-submenu">Servicios</i></a>
@@ -193,94 +193,6 @@
 					</ul>
 				</div>
 			</div><!-- End row -->
-
-			<hr>
-
-			<div class="text-center">
-				<h2>Nuestro equipo</h2>
-				<p class="lead">
-					Estaría considerado ubicar aquí fotos del equipo de operaciones.
-					<br> O caso contrario, un catálogo de las marcas que se ocuparían.
-				</p>
-			</div>
-
-			<!--Team Carousel -->
-			<div class="row">
-				<div class="owl-carousel team-carousel">
-
-					<div class="team-item">
-						<div class="team-item-img">
-							<img src="img/team/team-1.jpg" alt="">
-							<div class="team-item-detail">
-								<div class="team-item-detail-inner">
-									<h4>Slot 1</h4>
-									<p>Similique sunt culpa qui officia deserunt mollitia animi dolorum fuga.</p>
-									<ul class="social">
-										<li><a href="#0"><i class="icon-facebook"></i></a></li>
-										<li><a href="#0"><i class="icon-twitter"></i></a></li>
-										<li><a href="#0"><i class="icon-google"></i></a></li>
-										<li><a href="#0"><i class="icon-linkedin"></i></a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="team-item">
-						<div class="team-item-img">
-							<img src="img/team/team-2.jpg" alt="">
-							<div class="team-item-detail">
-								<div class="team-item-detail-inner">
-									<h4>Slot 2</h4>
-									<p>Similique sunt culpa qui officia deserunt mollitia animi dolorum fuga.</p>
-									<ul class="social">
-										<li><a href="#0"><i class="icon-facebook"></i></a></li>
-										<li><a href="#0"><i class="icon-twitter"></i></a></li>
-										<li><a href="#0"><i class="icon-google"></i></a></li>
-										<li><a href="#0"><i class="icon-linkedin"></i></a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="team-item">
-						<div class="team-item-img">
-							<img src="img/team/team-3.jpg" alt="">
-							<div class="team-item-detail">
-								<div class="team-item-detail-inner">
-									<h4>Slot 3</h4>
-									<p>Similique sunt culpa qui officia deserunt mollitia animi dolorum fuga.</p>
-									<ul class="social">
-										<li><a href="#0"><i class="icon-facebook"></i></a></li>
-										<li><a href="#0"><i class="icon-twitter"></i></a></li>
-										<li><a href="#0"><i class="icon-google"></i></a></li>
-										<li><a href="#0"><i class="icon-linkedin"></i></a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="team-item">
-						<div class="team-item-img">
-							<img src="img/team/team-4.jpg" alt="">
-							<div class="team-item-detail">
-								<div class="team-item-detail-inner">
-									<h4>Slot 4</h4>
-									<p>Similique sunt culpa qui officia deserunt mollitia animi dolorum fuga.</p>
-									<ul class="social">
-										<li><a href="#0"><i class="icon-facebook"></i></a></li>
-										<li><a href="#0"><i class="icon-twitter"></i></a></li>
-										<li><a href="#0"><i class="icon-google"></i></a></li>
-										<li><a href="#0"><i class="icon-linkedin"></i></a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div><!--End Team Carousel-->
 		</div><!-- End container -->
 	</main><!-- End main -->
 
