--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 									<li><a href="trabaja-con-nosotros.html">Trabaja con nosotros</a></li>
 								</ul>
 							</li>
-							<li><a href="contacts.html">Contáctanos</a></li>
+							<li><a href="contacto.html">Contáctanos</a></li>
 						</ul>
 					</div><!-- End main-menu -->
 				</nav>
@@ -161,7 +161,7 @@
 						<h3>Buscas un servicio accesible y de calidad? </h3>
 					</div>
 					<div class="col-md-3">
-						<a href="quotation_wizard.html" class="btn_quote">Cotízalo en línea</a>
+						<a href="nuestros-servicios.html" class="btn_quote">Conoce nuestros servicios</a>
 					</div>
 				</div><!-- End row -->
 			</div><!-- End container -->
@@ -238,12 +238,11 @@
 				<div class="col-md-8">
                 <form id="custom" method="POST" class="add_bottom_30">
 					<input id="website" name="website" type="text" value="">
-					<!-- Leave for security protection, read docs for details. Delete this comment before to publish. -->
 						<fieldset title="Paso 1">
 							<legend>Instalación</legend>
 							<h3>En donde deseas instalar una alarma?</h3>
 							<div class="form-group">
-								<label><input type="radio" value="Apartment" id="apartmento" name="location" class="icheck">Apartmento</label>
+								<label><input type="radio" value="Apartment" id="apartmento" name="location" class="icheck">Departamento</label>
 							</div>
 							<div class="form-group">
 								<label><input type="radio" value="Villa" id="Residencia" name="location" class="icheck">Residencia</label>
@@ -382,32 +381,6 @@
 						</fieldset><!-- End Step five -->
 						<input type="submit" class="finish" value="Enviar">
 					</form>
-				</div>
-			</div><!-- End row -->
-
-			<hr>
-
-			<div class="row">
-				<div class="col-sm-4">
-					<figure class="animated"><a href="service_1.html"><img src="img/service_home_1.jpg" alt="" class="img-responsive"></a></figure>
-					<h3>Seguridad Privada</h3>
-					<p>
-						Lorem ipsum dolor sit amet, vix erat audiam ei. Cum doctus civibus efficiantur in. Nec id tempor imperdiet deterruisset, doctus volumus.
-					</p>
-				</div>
-				<div class="col-sm-4">
-					<figure class="animated"><a href="service_2.html"><img src="img/service_home_2.jpg" alt="" class="img-responsive"></a></figure>
-					<h3>Planes de seguridad</h3>
-					<p>
-						Lorem ipsum dolor sit amet, vix erat audiam ei. Cum doctus civibus efficiantur in. Nec id tempor imperdiet deterruisset, doctus volumus.
-					</p>
-				</div>
-				<div class="col-sm-4">
-					<figure class="animated"><a href="service_3.html"><img src="img/service_home_3.jpg" alt="" class="img-responsive"></a></figure>
-					<h3>Monitoreo 24/7</h3>
-					<p>
-						Lorem ipsum dolor sit amet, vix erat audiam ei. Cum doctus civibus efficiantur in. Nec id tempor imperdiet deterruisset, doctus volumus.
-					</p>
 				</div>
 			</div><!-- End row -->
 		</div><!-- End container -->
