--- a/home.html
+++ b/home.html
@@ -174,14 +174,15 @@
                         <div class="box_feat">
                             <span><img src="img/svg_icons/shield.svg" alt=""></span>
                             <h3>Protección especializada</h3>
-                            <p>Lorem ipsum dolor sit amet, no movet simul laoreet pri, aperiri fabulas expetenda ei pro. Sed vero assentior ad, est vide liber viris ne. Mea saperet evertitur intellegebat ei, an labore cetero eos.</p>
+                            <p>protegemos tu vida y bienes, por medio de personal altamente calificado y entrenado, con equipo y dotación de seguridad moderno.
+</p>
                         </div>
 					</div>
 					<div class="col-md-6">
 						<div class="box_feat">
                             <span><img src="img/svg_icons/mobile.svg" alt=""></span>
                             <h3>Monitoreo remoto</h3>
-                            <p>Mea saperet evertitur intellegebat ei, an labore cetero eos. Quo no facilisis contentiones, enim graeci vim ea, justo graecis ne qui. His tation theophrastus intellegebat ut, hinc fierent nam ea.</p>
+														<p>Tenemos el control de tus bienes y de nuestro servicio con un monitoreo constante y permanente los 365 días del año. </p>
                         </div>
 					</div>
 				</div><!-- End row -->
@@ -190,14 +191,14 @@
                         <div class="box_feat">
                             <span><img src="img/svg_icons/video-camera.svg" alt=""></span>
                             <h3>Videovigilancia</h3>
-                            <p>Lorem ipsum dolor sit amet, no movet simul laoreet pri, aperiri fabulas expetenda ei pro. Sed vero assentior ad, est vide liber viris ne. Mea saperet evertitur intellegebat ei, an labore cetero eos.</p>
+                            <p>es el complemento para una seguridad integral, con modernos sistemas electrónicos de última tecnología. </p>
                         </div>
 					</div>
 					<div class="col-md-6">
 						<div class="box_feat">
                             <span><img src="img/svg_icons/microphone.svg" alt=""></span>
-                            <h3>Monitoreo de sonido</h3>
-                            <p>Mea saperet evertitur intellegebat ei, an labore cetero eos. Quo no facilisis contentiones, enim graeci vim ea, justo graecis ne qui. His tation theophrastus intellegebat ut, hinc fierent nam ea.</p>
+                            <h3>•	Protección VIP</h3>
+                            <p>Servicio de guardaespaldas, traslados, investigación y custodia al mas alto nivel y discreción, con ex Oficiales de las fuerzas del orden nacional.</p>
                         </div>
 					</div>
 				</div><!-- End row -->
@@ -205,15 +206,15 @@
 					<div class="col-md-6">
                         <div class="box_feat">
                             <span><img src="img/svg_icons/settings.svg" alt=""></span>
-                            <h3>Soporte Técnico</h3>
-                            <p>Lorem ipsum dolor sit amet, no movet simul laoreet pri, aperiri fabulas expetenda ei pro. Sed vero assentior ad, est vide liber viris ne. Mea saperet evertitur intellegebat ei, an labore cetero eos.</p>
+                            <h3>•	Consultoría</h3>
+                            <p>Realizamos estudios de seguridad integral, identificando puntos vulnerables y sensibles en la prevención de eventos que atenten con la seguridad física y de personas.</p>
                         </div>
 					</div>
 					<div class="col-md-6">
 						<div class="box_feat">
                             <span><img src="img/svg_icons/clipboard.svg" alt=""></span>
                             <h3>Profesionales certificados</h3>
-                            <p>Mea saperet evertitur intellegebat ei, an labore cetero eos. Quo no facilisis contentiones, enim graeci vim ea, justo graecis ne qui. His tation theophrastus intellegebat ut, hinc fierent nam ea.</p>
+                            <p>Somos rigurosos en nuestros procesos de selección con el afán de emplear a los mejores, transmitiendo e involucrándoles con nuestros valores, con capacitación constante que permita desarrollar sus habilidades.</p>
                         </div>
 					</div>
 				</div><!-- End row -->
