--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 					<div class="col-md-6">
 						<div class="box_feat">
                             <span><img src="img/svg_icons/microphone.svg" alt=""></span>
-                            <h3>•	Protección VIP</h3>
+                            <h3>Protección VIP</h3>
                             <p>Servicio de guardaespaldas, traslados, investigación y custodia al mas alto nivel y discreción, con ex Oficiales de las fuerzas del orden nacional.</p>
                         </div>
 					</div>
@@ -206,7 +206,7 @@
 					<div class="col-md-6">
                         <div class="box_feat">
                             <span><img src="img/svg_icons/settings.svg" alt=""></span>
-                            <h3>•	Consultoría</h3>
+                            <h3>Consultoría</h3>
                             <p>Realizamos estudios de seguridad integral, identificando puntos vulnerables y sensibles en la prevención de eventos que atenten con la seguridad física y de personas.</p>
                         </div>
 					</div>
@@ -216,6 +216,22 @@
                             <h3>Profesionales certificados</h3>
                             <p>Somos rigurosos en nuestros procesos de selección con el afán de emplear a los mejores, transmitiendo e involucrándoles con nuestros valores, con capacitación constante que permita desarrollar sus habilidades.</p>
                         </div>
+					</div>
+				</div><!-- End row -->
+				<div class="row">
+					<div class="col-md-6">
+												<div class="box_feat">
+														<span><img src="img/svg_icons/settings.svg" alt=""></span>
+														<h3>Respuesta a alertas de emergencia</h3>
+														<p>Contamos con patrullaje de emergencia ante llamadas de auxilio, o activación de botón de pánico, dando respuesta inmediata a cualquier emergencia 24/7.</p>
+												</div>
+					</div>
+					<div class="col-md-6">
+						<div class="box_feat">
+														<span><img src="img/svg_icons/clipboard.svg" alt=""></span>
+														<h3>lorem ipsum</h3>
+														<p>Somos rigurosos en nuestros procesos de selección con el afán de emplear a los mejores, transmitiendo e involucrándoles con nuestros valores, con capacitación constante que permita desarrollar sus habilidades.</p>
+												</div>
 					</div>
 				</div><!-- End row -->
 
