--- a/contacto.html
+++ b/contacto.html
@@ -70,7 +70,7 @@
           </div>
           <div class="col-sm-9">
             <ul id="top_links">
-              <li><a href="tel://+59332586728" id="phone_top">+593 32586728</a><span id="opening">Lun - Vie 8.00/17.00</span></li>
+              <li><a href="tel://+59332586728" id="phone_top">+593 032588785</a><span id="opening">Lun - Vie 8.00/17.00</span></li>
             </ul>
           </div>
         </div><!-- End row -->
@@ -93,7 +93,7 @@
             <a href="#" class="open_close" id="close_in"><i class="icon_close"></i></a>
             <ul>
               <li class="submenu">
-                <a href="#" class="show-submenu"><i class="fas fa-home"></i></a>
+                <a href="index.html" class="show-submenu"><i class="fas fa-home"></i></a>
               </li>
               <li class="submenu">
                 <a href="nuestros-servicios.html" class="show-submenu">Servicios</i></a>
@@ -108,7 +108,7 @@
                   <li><a href="trabaja-con-nosotros.html">Trabaja con nosotros</a></li>
                 </ul>
               </li>
-              <li><a href="contacts.html">Contáctanos</a></li>
+              <li><a href="contacto.html">Contáctanos</a></li>
             </ul>
           </div><!-- End main-menu -->
         </nav>
