--- a/agenda-una-visita.html
+++ b/agenda-una-visita.html
@@ -232,61 +232,12 @@
 				</div><!--End row -->
 			</div><!--End step -->
 
-			<div class="form_title">
-				<h3><strong><i class="icon-info-1"></i></strong>Información adicional</h3>
-				<p>
-					Infórmanos un poco más del lugar.
-				</p>
-			</div>
-                    <div class="step">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-group options clearfix">
-                            <strong>Tienes un seguro para tu hogar/oficina?</strong>
-                                <label class="switch-light switch-ios pull-right">
-                                <input type="checkbox" name="option_1" id="option_1" value="Yes">
-                                <span>
-                                <span>Si</span>
-                                </span>
-                                <a></a>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-group options clearfix">
-                                <strong>Eres un cliente nuevo?</strong>
-                                <label class="switch-light switch-ios pull-right">
-                                <input type="checkbox" name="option_2" id="option_2" checked value="Yes">
-                                <span>
-                                <span>Sí</span>
-                                </span>
-                                <a></a>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                <div class="row">
-					<div class="col-md-6 col-sm-6">
-						<div class="form-group options clearfix">
-							<strong>Es urgente?</strong>
-							<label class="switch-light switch-ios pull-right">
-                            <input type="checkbox" name="option_3" id="option_3" value="Yes">
-                            <span>
-                            <span>Sí</span>
-                            </span>
-                            <a></a>
-                            </label>
-						</div>
-					</div>
-				</div><!--End row -->
-			</div><!--End step -->
-
             <div class="form_title">
                 <h3><strong><i class="icon-pencil-7"></i></strong>Cuéntanos, qué necesitas?</h3>
             </div>
 				<div class="step add_bottom_30">
 					<div class="form-group add_bottom_45">
-						<label>Marca con un check las opciones que correspondan.</label>
+						<label>    </label>
 						<textarea name="message_quote" id="message_quote" style="height:100px" class="form-control"></textarea>
 					</div>
 					<button type="submit" class="btn_1 medium">Enviar</button>
@@ -301,9 +252,9 @@
                     	<h4>Necesitas ayuda?</h4>
                         <h5><i class="icon_globe"></i> Llámanos</h5>
                             <ul>
-                                <li><strong>Ventas</strong><br><a href="tel://+59332586728"> 32586728</a> - <a href="tel://+59332586728"> 32586728</a><br><small>Lunes a viernes 8am - 5pm</small></li>
-                                <li><strong>Asistencia 24h</strong><br><a href="tel://+59332586728"> 32586728</a></li>
-                                <li><strong>Información General</strong><br><a href="tel://+59332586728"> 32586728</a><br><small>Lunes a viernes 8am - 5pm</small></li>
+                                <li><strong>Ventas</strong><br><a href="tel://+59332588785"> 32588785 </a> - <a href="tel://+593994811800"> 0994811800 </a><br><small>Lunes a viernes 8am - 5pm</small></li>
+                                <li><strong>Asistencia 24h</strong><br><a href="tel://+593995183637 "> 0995183637 </a></li>
+                                <li><strong>Información General</strong><br><a href="tel://+593992553953"> 0992553953</a><br><small>Lunes a viernes 8am - 5pm</small></li>
                             </ul>
                              <h5><i class="icon_mail_alt"></i> Escríbenos</h5>
                             <ul>
