--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         <div class="box_feat">
                             <span><img src="img/svg_icons/shield.svg" alt=""></span>
                             <h3>Protección especializada</h3>
-                            <p>protegemos tu vida y bienes, por medio de personal altamente calificado y entrenado, con equipo y dotación de seguridad moderno.
+                            <p>Protegemos tu vida y bienes, por medio de personal altamente calificado y entrenado, con equipo y dotación de seguridad moderno.
 </p>
                         </div>
 					</div>
@@ -191,7 +191,7 @@
                         <div class="box_feat">
                             <span><img src="img/svg_icons/video-camera.svg" alt=""></span>
                             <h3>Videovigilancia</h3>
-                            <p>es el complemento para una seguridad integral, con modernos sistemas electrónicos de última tecnología. </p>
+                            <p>Es el complemento para una seguridad integral, con modernos sistemas electrónicos de última tecnología. </p>
                         </div>
 					</div>
 					<div class="col-md-6">
